# cv-modifier

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  ai_engine.py  config.py  cover_letter_generator.py  main.py  profile_data.py  requirements.txt
.github/workflows/: warmup.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements.lock.txt
backend/app/: config.py  database.py  main.py
backend/app/api/: auth.py  billing.py  generations.py  profiles.py  referrals.py  router.py
backend/app/core/: limiter.py  security.py
backend/app/models/: __init__.py  generation.py  profile.py  referral.py  stripe_event.py  user.py
backend/app/schemas/: auth.py  generation.py  profile.py  referral.py
backend/app/services/: ai_engine.py  cover_letter.py  cv_extractor.py  cv_generator.py  email_service.py  pipeline.py  referrals.py  scraper.py  sse_bus.py  storage.py
backend/app/services/cv_templates/: __init__.py  _shared.py  classic.py  creative.py  minimalist.py  modern.py
backend/cv_modifier_saas.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: audit_metier_uniqueness.py  generate_template_previews.py  send_monthly_recaps.py
backend/tests/: conftest.py  test_authz.py  test_billing.py  test_credit_claim.py  test_generation_edit.py  test_referrals.py  test_scraper_ssrf.py
frontend/: instrumentation.ts  next.config.ts  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  vercel.json
frontend/public/: llms.txt
legacy_cli/: cv_generator.py  scraper.py
(+56 files in other folders)
